cfastlogging/h/logging.h

// Logging module

Logging logging_new_default();
int logging_apply_config(Logging logging, const char *path);
int logging_add_writer_config(Logging logging, WriterConfigEnum config);
int logging_enable(Logging logging, uint32_t wid);
int logging_disable(Logging logging, uint32_t wid);