csharpfastlogging/FastLogging.cs


    [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "logging_new")]
    internal static extern IntPtr logging_new(byte level, [MarshalAs(UnmanagedType.LPUTF8Str)] string domain,
        [In] IntPtr[]? configs, UIntPtr configCount, IntPtr extConfig,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? configPath);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr ext_config_new(MessageStruct structured, sbyte hostname, sbyte pname, sbyte pid, sbyte tname, sbyte tid);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr logging_new_default();
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern int logging_shutdown(IntPtr logging, sbyte now);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern int logging_add_writer_config(IntPtr logging, IntPtr config);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern void logging_add_logger(IntPtr logging, IntPtr logger);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern int logging_set_level(IntPtr logging, uint writer, byte level);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern void logging_set_domain(IntPtr logging, [MarshalAs(UnmanagedType.LPUTF8Str)] string domain);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern int logging_enable(IntPtr logging, uint writer);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern int logging_disable(IntPtr logging, uint writer);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern void logging_remove_writer(IntPtr logging, uint writer);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr logging_sync_all(IntPtr logging, double timeout);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr logging_rotate(IntPtr logging, [MarshalAs(UnmanagedType.LPUTF8Str)] string? path);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern int logging_save_config(IntPtr logging, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern int logging_apply_config(IntPtr logging, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr logging_get_config_string(IntPtr logging);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr logging_trace(IntPtr logging, [MarshalAs(UnmanagedType.LPUTF8Str)] string message);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr logging_debug(IntPtr logging, [MarshalAs(UnmanagedType.LPUTF8Str)] string message);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr logging_info(IntPtr logging, [MarshalAs(UnmanagedType.LPUTF8Str)] string message);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr logging_success(IntPtr logging, [MarshalAs(UnmanagedType.LPUTF8Str)] string message);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr logging_warning(IntPtr logging, [MarshalAs(UnmanagedType.LPUTF8Str)] string message);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr logging_error(IntPtr logging, [MarshalAs(UnmanagedType.LPUTF8Str)] string message);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr logging_critical(IntPtr logging, [MarshalAs(UnmanagedType.LPUTF8Str)] string message);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr logging_fatal(IntPtr logging, [MarshalAs(UnmanagedType.LPUTF8Str)] string message);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr logging_exception(IntPtr logging, [MarshalAs(UnmanagedType.LPUTF8Str)] string message);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr logger_new(byte level, [MarshalAs(UnmanagedType.LPUTF8Str)] string domain);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern IntPtr logger_new_ext(byte level, [MarshalAs(UnmanagedType.LPUTF8Str)] string domain, sbyte tname, sbyte tid);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern void logger_set_level(IntPtr logger, byte level);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern void logger_set_domain(IntPtr logger, [MarshalAs(UnmanagedType.LPUTF8Str)] string domain);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern int logger_trace(IntPtr logger, [MarshalAs(UnmanagedType.LPUTF8Str)] string message);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern int logger_debug(IntPtr logger, [MarshalAs(UnmanagedType.LPUTF8Str)] string message);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern int logger_info(IntPtr logger, [MarshalAs(UnmanagedType.LPUTF8Str)] string message);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern int logger_success(IntPtr logger, [MarshalAs(UnmanagedType.LPUTF8Str)] string message);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern int logger_warning(IntPtr logger, [MarshalAs(UnmanagedType.LPUTF8Str)] string message);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern int logger_error(IntPtr logger, [MarshalAs(UnmanagedType.LPUTF8Str)] string message);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern int logger_critical(IntPtr logger, [MarshalAs(UnmanagedType.LPUTF8Str)] string message);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern int logger_fatal(IntPtr logger, [MarshalAs(UnmanagedType.LPUTF8Str)] string message);
    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)] internal static extern int logger_exception(IntPtr logger, [MarshalAs(UnmanagedType.LPUTF8Str)] string message);
}